infra/gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintrax-dev
  labels:
    name: fintrax-dev
    app.kubernetes.io/part-of: fintrax
